--- a/DESTAP/Views/CHTrack/Edit.cshtml
+++ b/DESTAP/Views/CHTrack/Edit.cshtml
@@ -127,7 +127,7 @@
                 <span asp-validation-for="CompleteDate" class="text-danger"></span>
             </div>
         </div>
-
+        <input type="hidden" name="FilePath" value="@Model.FilePath"/>
         <div class="form-group row">
             <div class="col-sm-10 offset-sm-2">
                 <button type="submit" class="btn btn-primary">Kaydet</button>
