--- a/DESTAP/Views/CPTrack/Index.cshtml
+++ b/DESTAP/Views/CPTrack/Index.cshtml
@@ -66,6 +66,7 @@
                             <td id="completionDate_@item.ID" class="clickable-cell">@item.CompleteDate?.ToString("dd.MM.yyyy HH:mm")</td>
                             <td class="clickable-cell">
                                 <div class="text-truncate" style="max-width: 150px; overflow: hidden; text-overflow: ellipsis;">
+                                    <input type="hidden" class="FilePath" value="@item.FilePath" />
                                     @item.Description
                                 </div>
                             </td>
@@ -281,7 +282,7 @@
                         </tr>
                         <tr>
                             <td><strong>Sorumlu Departman</strong></td>
-                            <td id="recRSPDepartment"></td>
+                            <td id="recDepartment"></td>
                         </tr>
                         <tr>
                             <td><strong>Sorumlu Kişi</strong></td>
@@ -302,6 +303,12 @@
                         <tr>
                             <td><strong>Açıklama</strong></td>
                             <td id="recDescription"></td>
+                        </tr>
+                        <tr>
+                            <td><strong>Dosya Yolları</strong></td>
+                            <td>
+                                <ul id="recFilePathList"></ul>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -366,7 +373,7 @@
                 var recTargetDate = $(this).closest('tr').find('td:eq(10)').text(); // Hedef Tarih (11. sütun)
                 var recCompleteDate = $(this).closest('tr').find('td:eq(11)').text(); // Tamamlanma Tarihi (12. sütun)
                 var recDescription = $(this).closest('tr').find('td:eq(12)').text(); // Açıklama (13. sütun)
-
+                var recFilePath = $(this).closest('tr').find('.FilePath').val(); // filePath (16. sütun)
                 // Modal içindeki alanları güncelle
                 $('#recID').text(recID);
                 $('#recYear').text(recYear);
@@ -381,7 +388,18 @@
                 $('#recTargetDate').text(recTargetDate);
                 $('#recCompleteDate').text(recCompleteDate);
                 $('#recDescription').text(recDescription);
+                // Dosya yollarını listeye ekle
+                var filePathList = $('#recFilePathList');
+                filePathList.empty(); // Mevcut listeyi temizle
 
+                if (recFilePath) {
+                    var filePaths = recFilePath.split(',');
+                    filePaths.forEach(function (path) {
+                        filePathList.append('<li><a href="' + path + '" target="_blank">' + path + '</a></li>');
+                    });
+                } else {
+                    filePathList.append('<li>Dosya yolu bulunamadı</li>');
+                }
 
                 // Modal'ı göster
                 $('#recDetailModal').modal('show');
