--- a/DESTAP/Views/CHTrack/Create.cshtml
+++ b/DESTAP/Views/CHTrack/Create.cshtml
@@ -142,7 +142,7 @@
                             </div>
                          -->
                         <div class="form-row mb-3">
-                            <label asp-for="Description" class="col-md-4 col-form-label text-md-right">TAMAMLANMA TARİHİ</label>
+                            <label asp-for="Description" class="col-md-4 col-form-label text-md-right">AÇIKLAMA</label>
                             <div class="col-md-8">
                                 <textarea asp-for="Description" class="form-control"></textarea>
                                 <span asp-validation-for="Description" class="text-danger"></span>
