--- a/DESTAP/Views/Shared/_Layout.cshtml
+++ b/DESTAP/Views/Shared/_Layout.cshtml
@@ -22,10 +22,7 @@
 
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/Home/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/Home/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" href="~/Admin/Index">Home</a>
                         </li>
                     </ul>
                     <!-- Kullanıcı Adı ve Soyadı Sağ Tarafa Ekleniyor -->
